<resources>
    <string name="app_name">excalibur</string>
    <string name="action_settings">Settings</string>
    <string name="load_from_db">Load from DB</string>
    <string name="message">Item clicked</string>
    <string name="search_hint">Search for anything</string>
    <string name="ship_time_label">ship label&#160;</string>
    <string name="next_up">next up</string>
    <string name="empty_string" />
    <string name="space_string">&#160;</string>
    <string name="discoverItem">Discover</string>
    <string name="my_plans">My Plans</string>
    <string name="detail_module_accessibility">Accessibility &amp; Other info</string>
    <string name="detail_module_legal">Legal</string>
    <string name="detail_module_age">Age Restriction</string>
    <string name="detail_module_cuisine">Cuisine</string>
    <string name="detail_module_times">Times</string>
    <string name="detail_module_promotion">Promotion</string>
    <string name="prices">Prices</string>
    <string name="price">Price</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="item_price">$%1$s</string>
    <string name="price_range">Price Range</string>
    <string name="prices_from">Prices from</string>
    <string name="hyphen_with_spaces">" - "</string>
    <string name="price_free">Free</string>
    <string name="deck_label">Deck %1$s</string>
    <string name="accessibility_hero_image_content_description">Hero image</string>
    <string name="discover_item_detail_age_restriction_title">Ages</string>
    <string name="accessibility_map_btn_content_description">Activity location</string>
    <string name="accessibility_back_btn_content_description">Back button</string>
    <string name="discover_item_detail_see_more_btn">See more</string>
    <string name="discover_item_detail_lunch_title">Lunch</string>
    <string name="discover_item_detail_dinner_title">Dinner</string>
    <string name="discover_item_detail_see_menu">See menu</string>
    <string name="discover_item_detail_description_expanded_text">See less</string>
    <string name="discover_item_detail_price_range">$%1$s&#8210;$%2$s</string>
    <string name="product_detail_find_on_deck">Find on Deck</string>
    <string name="product_detail_reservation_required">Reservation Required</string>
    <string name="discover_item_detail_make_a_reservation">Make a Reservation</string>
    <string name="discover_item_detail_experience">Experience</string>
    <string name="discover_item_detail_attire">Attire</string>
    <string name="discover_item_detail_know">Know Before You Go</string>
    <string name="product_detail_show_more">Show More</string>
    <string name="product_detail_show_less">Show Less</string>
    <string name="product_detail_show_menu">Show Menu</string>
    <string name="title_show_times">Show Times</string>
    <string name="title_times">Times</string>
    <string name="times_vary">Times Vary</string>
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="roboto_medium_italic">fonts/Roboto-MediumItalic.ttf</string>
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="proxima_nova_regular">fonts/ProximaNova-Regular.otf</string>
    <string name="proxima_nova_bold">fonts/ProximaNova-Bold.otf</string>
    <string name="proxima_nova_semi_bold">fonts/ProximaNova-Semibold.otf</string>
    <string name="royal_activity">Activities</string>
    <string name="spa">Spa</string>
    <string name="dining">Dining</string>
    <string name="shopping">Shopping</string>
    <string name="shorex">Excursions</string>
    <string name="entertainment">Entertainment</string>
    <string name="services">Guest Services</string>
    <string name="search">Search</string>
    <string name="change_dates">Change Dates</string>
    <string name="hardcoded_ship_time">14:07</string>
    <string name="hardcoded_place">Masquerade Theater</string>
    <string name="hardcoded_time">In 15 min</string>
    <string name="hardcoded_destination_place">ST MARTIN</string>
    <string name="hardcoded_destination_time">in 1:40 hours</string>
    <string name="hardcoded_detail_activity_location">Location Here</string>
    <string name="hardcoded_detail_deck_and_direction">Deck 12 AFT</string>
    <string name="hardcoded_detail_port">St Martin</string>
    <string name="hardcoded_activity_title">Sams\'s BBQ Wild House</string>
    <string name="hardcoded_reservation_required">Reservation required</string>
    <string name="hardcoded_age_restriction_title">Ages</string>
    <string name="hardcoded_age_restriction_description">All Ages</string>
    <string name="hardcoded_today">Today</string>
    <string name="hardcoded_lunch_time_description">12:00 pm - 3:00 pm</string>
    <string name="hardcoded_dinner_time_description">5:00 pm - 10:00 pm</string>
    <string name="hardcoded_detail_description">\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
        quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
        quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
        nulla pariatur?\"</string>
    <string name="hardcoded_detail_short_description">\"This description is short enough to whet ones
        apetite but long enough to be meaningful\"</string>
    <string name="hardcoded_day_picker_date_footer">Feb 15 - Mar 3</string>
    <string name="hardcoded_day_picker_description">7 Day Eastern Caribbean Cruise</string>
    <string name="hardcoded_day_picker_calendar_day">Day 2</string>
    <string name="hardcoded_day_picker_ship_name">Allure of Seas</string>
    <string name="category_royal_activity">ACTIVITIES</string>
    <string name="category_spa">SPA</string>
    <string name="category_dining">DINING</string>
    <string name="category_shopping">SHOPPING</string>
    <string name="category_shorex">SHOREX</string>
    <string name="category_entertainment">ENTERTAINMENT</string>
    <string name="category_guest_services">GUEST_SERVICES</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="triptych_tab_plans">Plans Screen</string>
    <string name="triptych_tab_me">Me Screen</string>
    <string name="product_duration_template">%d min.</string>
    <string name="no_items_to_show">There are no products right now, please come back later!</string>
    <string name="ages">Ages</string>
    <string name="activity_level">Activity Level</string>
    <string name="operating_hours">Operating hours</string>
    <string name="day_1">Day 1</string>
    <string name="guest_should_be">Guests should be</string>
    <string name="mins">%d mins</string>
    <string name="day_arg">Day %s</string>
    <string name="duration">Duration</string>
    <string name="sessions_from">Sessions from</string>
    <string name="planner_header_show_more">Show More</string>
    <string name="planner_header_show_less">Show Less</string>
    <string name="itinerary_product_view_am">" AM"</string>
    <string name="itinerary_product_view_pm">" PM"</string>
    <string name="itinerary_product_view_colon">:</string>
    <string name="itinerary_product_view_dash">&#8210;</string>
    <string name="itinerary_accessibility_product_image">Item Image</string>
    <string name="itinerary_separator_title_on_going">On going</string>
    <string name="planner_operating_hours">%1$s &#8210; %2$s</string>
    <string name="shared_element_transition_name">hero_image</string>
    <string name="title_morning">Morning</string>
    <string name="title_afternoon">Afternoon</string>
    <string name="title_evening">Evening</string>
    <string name="title_late_night">Late night</string>
    <string name="planner_title_all_day">All Day</string>
    <string name="itinerary_list_bottom_title">That\'s all for today</string>
    <string name="itinerary_list_bottom_emergency">Emergencies &amp; Medical</string>
    <string name="itinerary_list_bottom_legal">Privacy &amp; Legal</string>
    <string name="itinerary_list_bottom_about">About this App</string>
    <plurals name="product_hr">
        <item quantity="one">"%d hr "</item>
        <item quantity="other">"%d hrs "</item>
    </plurals>
    <plurals name="product_min">
        <item quantity="other">%d min</item>
    </plurals>
    <string name="dining_type">Dining Type</string>
    <string name="dining_times">Dining Times</string>
    <string name="advisement_cuisine">Cuisine</string>
    <string name="accessibility">Accessibility &amp; Other Info</string>
    <string name="detail_module_height">Height Restriction</string>
    <string name="guest_name_label">Let\'s start with your name</string>
    <string name="guest_name_hint">First and last name</string>
    <string name="title_email_address">Now let\'s get your email address</string>
    <string name="title_hint_email_address">Email address</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="message_smaller_email">Email must to be smaller than 100 characters</string>
    <string name="incorrect_email_format">"Incorrect email format"</string>
    <string name="title_password_almost">Almost there! Let\'s create a password</string>
    <string name="hint_password">Create password</string>
    <string name="title_checkbox_password">Show Password</string>
    <string name="rule_password">7 characters min, 1 special character</string>
    <string name="min_characters"> 7 characters min, </string>
    <string name="must_uppercase"> 1 uppercase, </string>
    <string name="must_lowercase"> 1 lowercase, </string>
    <string name="must_special_character"> 1 special character </string>
    <string name="questions_title">Choose a question</string>
    <string name="questions_description">Last step! Let’s pick a secret question\nin case you forget your password</string>
    <string name="hint_answer_question">Your secret answer</string>
    <string name="text_button_done">Done</string>
    <string name="regex_answer">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ - \'</string>
    <string name="create_done_title">Done!</string>
    <string name="create_done_sub_title">Let´s explore </string>
    <string name="email_exists_message">This email exists, please log in or reset your password.</string>
    <string name="error_message_no_connection">We were not able to connect. Please check your internet connection and try again.</string>
    <string name="error_message_security_questions">Something went wrong, please try again.</string>
    <string name="error_message_no_information_yet">There is no information yet. Please try again later</string>
    <string name="hardcoded_home_status">At Sea</string>
    <string name="hardcoded_day_tab">Day 1</string>
    <string name="today_day_title">Today</string>
    <string name="day_title">"Day "</string>
    <string name="day_picker_at_sea">At sea</string>
</resources>