<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/detail_discover_item_dinner_times_padding">

    <TextView
        android:id="@+id/text_module_lunch_title"
        style="@style/AppTheme.DiscoverItemModuleTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_item_detail_lunch_title"/>

    <TextView
        android:id="@+id/text_module_lunch_time"
        style="@style/AppTheme.DiscoverItemModuleDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hardcoded_lunch_time_description"/>

    <include
        android:id="@+id/discover_detail_lunch_menu"
        layout="@layout/discover_detail_item_link_menu"/>

    <TextView
        android:id="@+id/text_module_dinner_title"
        style="@style/AppTheme.DiscoverItemModuleTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_discover_item_dinner_title_margin_top"
        android:text="@string/discover_item_detail_dinner_title"/>

    <TextView
        android:id="@+id/text_module_dinner_time"
        style="@style/AppTheme.DiscoverItemModuleDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hardcoded_dinner_time_description"/>

    <include
        android:id="@+id/discover_detail_dinner_menu"
        layout="@layout/discover_detail_item_link_menu"/>

</LinearLayout>