<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_information_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_normal"
        android:weightSum="@integer/detail_header_total_weight">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_weight="@integer/detail_header_left_weight"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_product_detail_name"
                style="@style/AppTheme.Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/product_name_margin_bottom"
                android:maxLines="@integer/detail_product_name_max_lines"
                android:ellipsize="end"
                android:text="@string/hardcoded_activity_title"/>

            <TextView
                android:id="@+id/text_product_venue"
                style="@style/AppTheme.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardcoded_detail_activity_location"/>

            <TextView
                android:id="@+id/text_product_deck_and_direction"
                style="@style/AppTheme.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardcoded_detail_deck_and_direction"/>

            <TextView
                android:id="@+id/text_product_port"
                style="@style/AppTheme.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardcoded_detail_port"/>

            <TextView
                android:id="@+id/button_find_on_deck"
                style="@style/AppTheme.Headline5.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:drawablePadding="@dimen/find_on_deck_drawable_padding"
                android:drawableStart="@drawable/ic_deck_map"
                android:gravity="center_vertical"
                android:text="@string/product_detail_find_on_deck"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginTop="@dimen/upcharge_container_margin_top"
            android:layout_weight="@integer/detail_header_right_weight">

            <com.rcl.excalibur.custom.view.PriceRangeLayout
                android:id="@+id/price_range_product"
                app:maxRange="@integer/detail_product_price_range"
                app:onColor="@color/black"
                app:offColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/product_detail_reservation_background">

        <TextView
            style="@style/AppTheme.Headline5.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/product_detail_reservation_required"/>
    </FrameLayout>
</LinearLayout>