<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    style="@style/AppTheme.PlanCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_plan_container_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/item_plan_container_margin">

        <LinearLayout
            android:layout_width="@dimen/item_plan_line_top_width"
            android:layout_height="@dimen/item_plan_line_top_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/grey"/>

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_plan_image_margin_right"
            android:src="@drawable/thumb"/>

        <TextView
            android:id="@+id/card_next"
            style="@style/AppTheme.PlanNextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/card_image"
            android:layout_toRightOf="@+id/card_image"
            android:text="@string/next_up"/>

        <TextView
            android:id="@+id/card_next_title"
            style="@style/AppTheme.PlanTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_next"
            android:layout_toRightOf="@+id/card_image"
            android:text="@string/hardcoded_place"/>

        <TextView
            android:id="@+id/card_next_time"
            style="@style/AppTheme.PlanTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_next_title"
            android:layout_toRightOf="@+id/card_image"
            android:text="@string/hardcoded_time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_plan_line_bottom_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/grey"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>