<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    tools:context=".activity.guest.PasswordActivity">

    <fragment
        android:id="@+id/ship_time_fragment"
        android:name="com.rcl.excalibur.fragments.ShipTimeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ship_time_fragment"
        android:background="@drawable/bg_password"
        android:padding="@dimen/margin_general">

        <ImageView
            android:id="@+id/image_back_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@null"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_trending_flat" />

        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_general"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_password_almost"
                android:textColor="@color/white"
                android:textSize="@dimen/text_questions_description_size" />

            <EditText
                android:id="@+id/edit_create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general"
                android:gravity="left"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="@integer/max_length_password"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_big"
                android:theme="@style/AppTheme.GuestEditText" />

            <TextView
                android:id="@+id/text_show_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rule_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_questions_description_size" />

            <CheckBox
                android:id="@+id/checkbox_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_text"
                android:buttonTint="@color/white"
                android:text="@string/title_checkbox_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_questions_description_size"
                android:theme="@style/CheckBoxAppTheme" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/password_container"
            android:contentDescription="@null"
            android:src="@drawable/selector_image_next" />
    </RelativeLayout>
</RelativeLayout>
