<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.rcl.excalibur.activity.guest.EmailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_toolbar_size"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_back_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_edit_text"
            android:src="@drawable/ic_white_arrow_back" />

        <TextView
            android:id="@+id/text_title_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_big" />

        <EditText
            android:id="@+id/edit_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_general"
            android:layout_marginRight="@dimen/margin_general"
            android:digits="@string/regex_answer"
            android:gravity="center"
            android:hint="@string/hint_answer_question"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLength="@integer/max_length_email"
            android:textColor="@color/white"
            android:textColorHint="@color/email_editText_inactive"
            android:textSize="@dimen/size_text_big"
            android:theme="@style/AppTheme.LoginFlowEditText" />


        <TextView
            android:id="@+id/text_show_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white" />


    </LinearLayout>


    <Button
        android:id="@+id/button_done_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_text"
        android:background="@drawable/selector_button_done"
        android:enabled="false"
        android:padding="@dimen/padding_button_done"
        android:text="@string/text_button_done"
        android:textAllCaps="false"
        android:textColor="@color/bg_color"
        android:textStyle="bold" />

</RelativeLayout>
