<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_normal"
    android:layout_marginStart="@dimen/margin_normal"
    android:paddingBottom="@dimen/margin_normal"
    android:paddingTop="@dimen/margin_normal">

    <TextView
        android:id="@+id/prices_from_module_title"
        style="@style/AppTheme.DiscoverItemModuleTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/prices_from" />

    <LinearLayout
        android:id="@+id/prices_from_adult_content"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prices_from_module_title"
        android:layout_marginEnd="@dimen/prices_from_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prices_from_adult_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/price_range_dolar_margin_end"
            android:src="@drawable/ic_dolar" />

        <TextView
            android:id="@+id/prices_from_adult_text"
            style="@style/AppTheme.DiscoverItemModuleDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="40" />
    </LinearLayout>

    <TextView
        style="@style/AppTheme.DiscoverItemModuleSubTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prices_from_adult_content"
        android:text="@string/adults" />

    <LinearLayout
        android:id="@+id/prices_from_children_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prices_from_module_title"
        android:layout_toRightOf="@+id/prices_from_adult_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prices_from_children_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/price_range_dolar_margin_end"
            android:src="@drawable/ic_dolar" />

        <TextView
            android:id="@+id/prices_from_children_text"
            style="@style/AppTheme.DiscoverItemModuleDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="20" />
    </LinearLayout>

    <TextView
        style="@style/AppTheme.DiscoverItemModuleSubTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prices_from_adult_content"
        android:layout_toEndOf="@+id/prices_from_adult_content"
        android:text="@string/children" />

</RelativeLayout>